--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,11 @@ language: go
 go:
   - 1.13
 
-addons:
-  apt:
-    packages:
-    - libzmq3-dev
-
 install:
   - go install ./cmd/...
 
 script:
-  - go test ./...
+  - PATH=$(go env GOPATH)/bin:$PATH go test ./...
   # Check whether files are syntactically correct.
   - "gofmt -l $(find . -path ./vendor -prune -o -name '*.go' -print | tr '\\n' ' ') >/dev/null"
   # Check whether files were not gofmt'ed.
