localdcs: dcs-index-backend is gone

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - go install ./cmd/...
 
 script:
-  - PATH=$(go env GOPATH)/bin:$PATH go test ./...
+  - go test ./...
   # Check whether files are syntactically correct.
   - "gofmt -l $(find . -path ./vendor -prune -o -name '*.go' -print | tr '\\n' ' ') >/dev/null"
   # Check whether files were not gofmt'ed.
