--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         [ "$(gofmt -l $(find . -name '*.go') 2>&1)" = "" ]
 
+    - name: Install Linux package dependencies
+      run: |
+        sudo apt update && sudo apt install -y --no-install-recommends slimit yui-compressor
+
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
