--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install Linux package dependencies
       run: |
-        sudo apt update && sudo apt install -y --no-install-recommends slimit yui-compressor
+        sudo apt update && sudo apt install -y --no-install-recommends slimit yui-compressor zopfli
 
     - name: Get dependencies
       run: |
