systemd: StartLimitInterval option has changed

--- a/systemd/dcs-common-drop-in.conf
+++ b/systemd/dcs-common-drop-in.conf
@@ -18,5 +18,7 @@ RestartSec=1
 # and only whitelist exit code 0:
 Restart=always
 RestartPreventExitStatus=0
+
+[Unit]
 # Allow infinite restarts, even within a short time.
-StartLimitInterval=0
+StartLimitIntervalSec=0
